[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = { find = { where = ["."], exclude = ["tests", "sdk", "benchmark", "docs", "tests.*", "sdk.*", "benchmark.*", "docs.*"] } }

[project.scripts]
sweep = "sweepai.cli:app"
sweepai = "sweepai.cli:app"

[project.urls]
Repository = "https://github.com/sweepai/sweep"
Community = "https://discord.gg/sweep"
Documentation = "https://docs.sweep.dev"
Homepage = "https://sweep.dev"
"Bug Tracker" = "https://github.com/sweepai/sweep/issues"

[project]
name = "sweepai"
version = "1.0.8"
description = "Sweep fixes GitHub issues"
authors = [
    {name = "Kevin Lu", email = "kevin@sweep.dev"},
    {name = "William Zeng", email = "william@sweep.dev"},
    {name = "Martin Ye", email = "martin@sweep.dev"},
]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3.10"
]
dependencies = [
  "aiohttp==3.9.3",
  "aiosignal==1.3.1",
  "aiostream==0.5.2",
  "altair==4.2.2",
  "amqp==5.2.0",
  "annotated-types==0.6.0",
  "anyio==4.3.0",
  "argon2-cffi==23.1.0",
  "argon2-cffi-bindings==21.2.0",
  "Arpeggio==2.0.2",
  "arrow==1.3.0",
  "asgiref==3.7.2",
  "astroid==2.15.8",
  "asttokens==2.4.1",
  "async-lru==2.0.4",
  "async-timeout==4.0.3",
  "attrs==23.2.0",
  "Babel==2.14.0",
  "backoff==2.2.1",
  "beautifulsoup4==4.12.3",
  "billiard==4.2.0",
  "bleach==6.1.0",
  "blinker==1.7.0",
  "build==0.10.0",
  "cachetools==5.3.2",
  "caliper-reader==0.4.0",
  "celery==5.3.6",
  "certifi==2024.2.2",
  "cffi==1.16.0",
  "cfgv==3.4.0",
  "charset-normalizer==3.3.2",
  "click==8.1.7",
  "click-didyoumean==0.3.0",
  "click-plugins==1.1.1",
  "click-repl==0.3.0",
  "comm==0.2.1",
  "config-path==1.0.5",
  "contourpy==1.2.0",
  "coverage==7.4.3",
  "cryptography==42.0.5",
  "cycler==0.12.1",
  "debugpy==1.8.1",
  "decorator==5.1.1",
  "defusedxml==0.7.1",
  "Deprecated==1.2.14",
  "dill==0.3.8",
  "distlib==0.3.8",
  "distro==1.9.0",
  "dnspython==2.6.1",
  "entrypoints==0.4",
  "eventlet==0.33.3",
  "exceptiongroup==1.2.0",
  "execnet==2.0.2",
  "executing==2.0.1",
  "fancycompleter==0.9.1",
  "fastapi==0.109.2",
  "fastjsonschema==2.19.1",
  "filelock==3.13.1",
  "flake8==6.1.0",
  "fonttools==4.49.0",
  "fqdn==1.5.1",
  "frozenlist==1.4.1",
  "gitdb==4.0.11",
  "GitPython==3.1.42",
  "greenlet==2.0.1",
  "grpcio==1.62.0",
  "grpcio-tools==1.62.0",
  "grpclib==0.4.3",
  "h11==0.14.0",
  "h2==4.1.0",
  "hatchet-sdk==0.15.4",
  "hpack==4.0.0",
  "httpcore==1.0.4",
  "httpx==0.26.0",
  "hyperframe==6.0.1",
  "identify==2.5.35",
  "idna==3.6",
  "importlib-metadata==7.0.1",
  "importmagic==0.1.7",
  "iniconfig==2.0.0",
  "isoduration==20.11.0",
  "isort==5.13.2",
  "jedi==0.19.1",
  "Jinja2==3.1.3",
  "json5==0.9.17",
  "jsonpointer==2.4",
  "jsonschema==4.21.1",
  "jsonschema-specifications==2023.12.1",
  "kiwisolver==1.4.5",
  "kombu==5.3.5",
  "lazy-object-proxy==1.10.0",
  "llvmlite==0.42.0",
  "logtail-python==0.2.10",
  "loguru==0.7.2",
  "lxml==4.9.3",
  "Markdown==3.5.2",
  "markdown-it-py==3.0.0",
  "markdownify==0.11.6",
  "MarkupSafe==2.1.5",
  "mccabe==0.7.0",
  "mdurl==0.1.2",
  "mistune==3.0.2",
  "monotonic==1.6",
  "mpmath==1.3.0",
  "msgpack==1.0.7",
  "multidict==6.0.5",
  "multiprocess==0.70.16",
  "nest-asyncio==1.6.0",
  "networkx==3.2.1",
  "nodeenv==1.8.0",
  "notebook==7.1.0",
  "notebook_shim==0.2.4",
  "nptyping==2.5.0",
  "numpy==1.26.4",
  "openai==1.12.0",
  "overrides==7.7.0",
  "packaging==23.2",
  "pandocfilters==1.5.1",
  "parso==0.8.3",
  "pathspec==0.12.1",
  "pexpect==4.9.0",
  "platformdirs==4.2.0",
  "pluggy==1.4.0",
  "posthog==3.4.2",
  "pre-commit==3.6.2",
  "prometheus-fastapi-instrumentator==6.1.0",
  "prometheus_client==0.20.0",
  "prompt-toolkit==3.0.43",
  "protobuf==4.25.3",
  "psutil==5.9.8",
  "ptyprocess==0.7.0",
  "pure-eval==0.2.2",
  "py-spy==0.3.14",
  "pyarrow==15.0.0",
  "pycodestyle==2.11.1",
  "pycparser==2.21",
  "pycubexr==1.2.1",
  "pydantic==2.6.3",
  "pydantic_core==2.16.3",
  "pydot==2.0.0",
  "pyee==9.0.4",
  "pyflakes==3.1.0",
  "PyGithub==1.58.2",
  "Pygments==2.17.2",
  "PyJWT==2.8.0",
  "pymongo==4.6.2",
  "PyNaCl==1.5.0",
  "pyparsing==3.1.1",
  "pyproject_hooks==1.0.0",
  "pyrepl==0.9.0",
  "pytest==7.4.4",
  "pytest-xdist==3.5.0",
  "python-dateutil==2.9.0.post0",
  "python-dotenv==1.0.1",
  "python-json-logger==2.0.7",
  "pytoolconfig==1.3.1",
  "pytz==2024.1",
  "PyYAML==6.0.1",
  "pyzmq==25.1.2",
  "qtconsole==5.5.1",
  "QtPy==2.4.1",
  "rapidfuzz==3.6.1",
  "redis==5.0.1",
  "referencing==0.33.0",
  "regex==2023.12.25",
  "replicate==0.15.4",
  "requests==2.31.0",
  "resend==0.6.0",
  "rfc3339-validator==0.1.4",
  "rfc3986-validator==0.1.1",
  "rich==13.7.0",
  "rope==1.12.0",
  "rpds-py==0.18.0",
  "ruff==0.3.0",
  "Send2Trash==1.8.2",
  "sigtools==4.0.1",
  "six==1.16.0",
  "smmap==5.0.1",
  "sniffio==1.3.1",
  "soupsieve==2.5",
  "stack-data==0.6.3",
  "starlette==0.36.3",
  "streamlit==1.31.1",
  "synchronicity==0.5.3",
  "tabulate==0.9.0",
  "tblib==3.0.0",
  "tenacity==8.2.3",
  "terminado==0.18.0",
  "textX==4.0.1",
  "tiktoken==0.3.3",
  "tinycss2==1.2.1",
  "toml==0.10.2",
  "tomli==2.0.1",
  "tomlkit==0.12.3",
  "toolz==0.12.1",
  "tornado==6.4",
  "tqdm==4.66.2",
  "traitlets==5.14.1",
  "tree-sitter==0.20.4",
  "tree-sitter-languages==1.10.2",
  "typer==0.9.0",
  "types-certifi==2021.10.8.3",
  "types-python-dateutil==2.8.19.20240106",
  "types-toml==0.10.8.7",
  "typing_extensions==4.10.0",
  "tzdata==2024.1",
  "tzlocal==5.2",
  "unidiff==0.7.5",
  "uri-template==1.3.0",
  "urllib3==2.2.1",
  "validators==0.22.0",
  "vine==5.1.0",
  "virtualenv==20.25.1",
  "watchdog==4.0.0",
  "watchfiles==0.21.0",
  "wcwidth==0.2.13",
  "webcolors==1.13",
  "webencodings==0.5.1",
  "websocket-client==1.7.0",
  "widgetsnbextension==4.0.10",
  "wmctrl==0.5",
  "wrapt==1.16.0",
  "yamllint==1.35.1",
  "yarl==1.9.4",
  "zipp==3.17.0",
]

[tool.isort]
profile = "black"

[tool.black]
string-normalization = false


[tool.pylint.'MESSAGES CONTROL']

disable=[
  'no-name-in-module'
]
