[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = { find = { where = ["."], exclude = ["tests", "sdk", "benchmark", "docs", "tests.*", "sdk.*", "benchmark.*", "docs.*"] } }


[project.scripts]
sweep = "sweepai.cli:main"
sweepai = "sweepai.cli:main"

[project.urls]
Repository = "https://github.com/sweepai/sweep"
Community = "https://community.sweep.dev/"
Documentation = "https://docs.sweep.dev"
Homepage = "https://sweep.dev"
"Bug Tracker" = "https://github.com/sweepai/sweep/issues"

[project]
name = "sweepai"
version = "2.1.4"
description = "Sweep fixes GitHub issues"
authors = [
    {name = "Kevin Lu", email = "kevin@sweep.dev"},
    {name = "William Zeng", email = "william@sweep.dev"},
    {name = "Martin Ye", email = "martin@sweep.dev"},
]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3.10"
]
dependencies = [
  "diskcache==5.6.3",
  "anthropic==0.21.3",
  "chardet==5.2.0",
  "beautifulsoup4==4.12.3",
  "cohere==5.2.5",
  "typer==0.10.0",
  "pygithub==2.2.0",
  "loguru==0.7.2",
  "rich==13.7.1",
  "fastapi==0.110.0",
  "prometheus-fastapi-instrumentator==7.0.0",
  "pyyaml==6.0.1",
  "python-dotenv==1.0.1",
  "openai==1.13.3",
  "backoff==2.2.1",
  "pymongo==4.6.3",
  "gitpython==3.1.42",
  "stringzilla==3.8.4",
  "tantivy==0.22.0",
  "tree-sitter==0.21.0",
  "tree-sitter-python==0.21.0",
  "tree-sitter-javascript==0.21.0",
  "tree-sitter-languages==1.10.2",
  "rapidfuzz==3.6.2",
  "importmagic==0.1.7",
  "pyflakes==3.2.0",
  "beautifulsoup4==4.12.3",
  "networkx==3.2.1",
  "attrs==23.2.0",
  "pytest==8.1.1",
  "redis==5.0.3",
  "numpy==1.26.4",
  "markdown==3.5.2",
  "yamllint==1.35.1",
  "logtail==1.0.1",
  "tabulate==0.9.0",
  "rapidfuzz==3.6.2",
  "resend==0.8.0",
  "psutil==5.9.8",
  "jinja2==3.1.4",
  "tiktoken==0.6.0",
  "uvicorn==0.29.0",
  "pylint==3.1.0",
  "parea-ai==0.2.114",
  "voyageai==0.2.1",
  "boto3==1.34.70",
  "scipy==1.12.0",
  "jira==3.8.0",
  "slack-sdk==3.27.1",
  "jsonpatch==1.33",
  "scikit-learn==1.4.2",
  "sentry-sdk==2.2.0",
]

[tool.isort]
profile = "black"

[tool.black]
string-normalization = false

[tool.pylint.'MESSAGES CONTROL']

disable=[
  'no-name-in-module'
]

[tool.ruff]
lint.select = ["T100"]
