[tool.poetry]
name = "sweepai"
version = "0.1.0"
description = "Sweep is an AI junior developer"
authors = ["SweepAI <info@sweep.ai>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
modal-client = "^0.50.2932"
e2b = "^0.1.0"
markdownify = "^0.11.6"
playwright = "^1.30.0"
robotexclusionrulesparser = "^1.7.1"
deeplake-core-vectorstore-deeplake-vectorstore = "^3.6.17"

[tool.poetry.dev-dependencies]
black = "^23.1.0"
isort = "^5.10.1"
mypy = "^0.910"
pytest = "^6.2.5"
pytest-cov = "^3.0.0"
pytest-mock = "^3.6.1"
pytest-asyncio = "^0.16.0"
flake8 = "^4.0.1"
pre-commit = "^2.15.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"