[tool.poetry]
name = "sandbox"
version = "0.1.0"
description = ""
authors = ["Kevin Lu <kevinlu1248@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
uvicorn = "^0.23.2"
loguru = "^0.7.0"
tiktoken = "^0.4.0"
openai = "^0.28.0"
backoff = "^2.2.1"

[tool.poetry.dev-dependencies]
fastapi = "^0.103.1"
docker = "^6.1.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
